[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "heisskleber"
version = "1.0.0"
description = "Heisskleber"
authors = [
  { name = "Felix Weiler-Detjen", email = "felix@flucto.tech" },
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies= [
    "aiomqtt>=2.3.0",
    "aioserial>=1.3.1",
    "pyyaml>=6.0.2",
    "pyzmq>=26.2.0",
]

[project.urls]
Homepage = "https://github.com/flucto-gmbh/heisskleber"
Repository = "https://github.com/flucto-gmbh/heisskleber"
Documentation = "https://heisskleber.readthedocs.io"


[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.1",
    "xdoctest>=1.2.0",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "sphinx>=8.0.2",
    "sphinx-autobuild>=2024.9.19",
    "sphinx-rtd-theme>=0.5.1",
    "sphinx_copybutton",
    "sphinx_autodoc_typehints",
]
filter = [
    "numpy>=2.1.1",
    "scipy>=1.14.1",
]

[tool.uv]
dev-dependencies = [
    "deptry>=0.20.0",
    "mypy>=1.11.2",
    "ruff>=0.6.8",
    "xdoctest>=1.2.0",
    "nox>=2024.4.15",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.1",
]
package = true

[tool.coverage.paths]
source = ["heisskleber", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["src/heisskleber"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
# fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
exclude = ["tests/*", "^test_*\\.py"]

[tool.ruff]
ignore-init-module-imports = true
target-version = "py39"
line-length = 120
fix = true
select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "TRY",      # tryceratops
]
ignore = [
  "E501",   # LineTooLong
  "E731",   # DoNotAssignLambda
  "A001",   #
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D"]


[tool.hatch]
version.source = "vcs"
version.path = "src/heisskleber/__init__.py"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"
